frontend/src/Utils/Kubernetes/blazorboilerplate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: blazorboilerplate
  name: blazorboilerplate
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: blazorboilerplate
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: blazorboilerplate
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - cai-omaml-main
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Development
        - name: ASPNETCORE_Kestrel__Certificates__Default__Password
          value: Admin123
        - name: ASPNETCORE_Kestrel__Certificates__Default__Path
          value: aspnetapp.pfx
        - name: ASPNETCORE_URLS
          value: https://+:443;http://+80
        - name: BlazorBoilerplate__ApplicationUrl
          value: blazorboilerplate
        - name: BlazorBoilerplate__CertificatePassword
          value: Admin123
        - name: BlazorBoilerplate__UseSqlServer
          value: "true"
        - name: ConnectionStrings__DefaultConnection
          value: "Server=141.100.60.107,32715;Database=blazor_boilerplate;Trusted_Connection=True;MultipleActiveResultSets=true;User=sa;Password=yourVeryStrong(!)Password;Integrated Security=false"
        - name: Serilog__MinimumLevel__Default
          value: Debug
        image: alexhda/omaml-frontend:latest
        name: blazorboilerplate
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          limits:
            cpu: "2"
            memory: "2194304e3"
      restartPolicy: Always
status: {}
