frontend/src/Utils/Kubernetes/blazorboilerplate-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: blazorboilerplate-node
  name: blazorboilerplate-node
spec:
  externalTrafficPolicy: Cluster
  type: NodePort
  ports:
  - name: "53415"
    port: 53415
    protocol: TCP
    targetPort: 80
    nodePort: 30778
  - name: "53443"
    port: 53443
    protocol: TCP
    targetPort: 443
    nodePort: 30878
  selector:
    io.kompose.service: blazorboilerplate
status:
  loadBalancer: {}
