frontend/src/Utils/Kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: omaml
  labels:
    io.kompose.service: redisserver
  name: redisserver
spec:
  type: ClusterIP
  ports:
  - name: "6379"
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    io.kompose.service: redisserver
status:
  loadBalancer: {}
