frontend/src/Utils/Kubernetes/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: omaml
  labels:
    io.kompose.service: sqlserver
  name: sqlserver
spec:
  externalTrafficPolicy: Cluster
  type: NodePort
  ports:
  - name: "1433"
    port: 1433
    protocol: TCP
    targetPort: 1433
  selector:
    io.kompose.service: sqlserver
status:
  loadBalancer: {}
