frontend/src/Utils/Kubernetes/blazorboilerplate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: omaml
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "affinity"
    nginx.ingress.kubernetes.io/session-cookie-expires: "14400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "14400"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/send-timeout: "3600"
spec:
  tls:
  - hosts:
    - dev.oma-ml.ai
    secretName: dev-oma-ml-tls
  rules:
  - host: dev.oma-ml.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blazorboilerplate
            port:
              number: 80
